<resources>
    <string name="app_name">gestta</string>

    <!-- Activity Login -->
    <string name="activity_login_input_hint_user">E-mail</string>
    <string name="activity_login_input_hint_password">Senha</string>
    <string name="activity_login_button_enter">Entrar</string>
    <string name="activity_login_button_forgot">Esqueceu a senha?</string>

    <!-- Activity Forgot Password -->
    <string name="activity_forgot_info">Para recuperar seu acesso ao gestta digite o email utilizado no cadastro</string>
    <string name="activity_forgot_input_hint_email">E-mail</string>
    <string name="activity_forgot_button_recovery">Recuperar senha</string>

    <!-- Activity Main -->
    <string name="activity_main_tab_dashboard">Dashboard</string>
    <string name="activity_main_tab_request">Solicitações</string>
    <string name="activity_main_tab_task">Tarefas</string>

    <!-- Menu Main -->
    <string name="menu_main_logout">Sair</string>

</resources>
